--- a/Install_Configuration.ini
+++ b/Install_Configuration.ini
@@ -1,3 +1,7 @@
+;-----------------------------------------------------------------------------
+; SETUP.EXE /configurationFile=Install_ConfigurationFile.ini /AGTSVCPASSWORD="pwd"  /sqlSvcPassword="pwd" /RSSVCPASSWORD="pwd"
+;-----------------------------------------------------------------------------
+
 ;SQL Server 2016 Configuration File
 [OPTIONS]
  
